<resources>
    <string name="app_name">晴天天气</string>
    <string name="upDataTextViewupdataing">正在更新</string>
    <string name="upDataTextViewupdataing2">更新完成</string>
    <string name="upDataTextViewupdataing3">更新失败</string>
    <string name="upDataTextViewGPS">当前位置</string>
    <string name="Welcomelayout1">欢迎使用晴天天气</string>
    <string name="Welcomelayout2">极简纯净的天气客户端</string>
    <string name="Welcomelayoutpermission">使用当前定位需要位置权限</string>
    <string name="Welcomelayoutpermission2">继续使用代表您同意</string>
    <string name="Welcomelayoutpermission3">用户协议</string>
    <string name="Welcomelayoutnext">使用当前定位</string>
    <string name="Welcomelayoutrefuse">搜索全国位置</string>
    <string name="Locationlayouttextview">位置管理</string>
    <string name="Locationlayouttextview2">轻点切换,长按删除</string>
    <string name="Settinglayouttextview">设置</string>
    <string name="Setting_Privacypolicy">用户协议</string>
    <string name="Setting_About">关于我们</string>
    <string name="Setting_donate">捐赠</string>
    <string name="LocationSearchtext">搜索全国位置</string>
    <string name="LocationSearchButtontext">取消</string>
    <string name="LocationSearchBEIJING">北京市</string>
    <string name="LocationSearchSHANGHAI">上海市</string>
    <string name="LocationSearchGUANGZHOU">广州市</string>
    <string name="LocationSearchSHENZHEN">深圳市</string>
    <string name="LocationSearchHANGZOU">杭州市</string>
    <string name="LocationSearchSUZHOU">苏州市</string>
    <string name="LocationSearchWUHAN">武汉市</string>
    <string name="LocationSearchNANJING">南京市</string>
    <string name="LocationSearchCHONGQING">重庆市</string>
    <string name="LocationSearchCHENGDU">成都市</string>
    <string name="LocationSearchTIANJIN">天津市</string>
    <string name="LocationSearchWUXI">无锡市</string>
    <string name="LocationSearchCHANGSHA">长沙市</string>
    <string name="LocationSearchZHENGZHOU">郑州市</string>
    <string name="LocationSearchNINGBO">宁波市</string>
    <string name="LocationSearchXIAN">西安市</string>
    <string name="LocationSearchSHIJIAZHUANG">石家庄市</string>
    <string name="LocationSearchQINGDAO">青岛市</string>
    <string name="LocationSearchNOW">获取当前位置</string>
    <string name="main_threedayweatherbutton">查看近15日天气</string>
    <string name="main_fifteendayweathertext">24小时预报</string>
    <string name="aa级">0级</string>
    <string name="ab级">1级</string>
    <string name="ac级">2级</string>
    <string name="ad级">3级</string>
    <string name="ae级">4级</string>
    <string name="af级">5级</string>
    <string name="ag级">6级</string>
    <string name="ah级">7级</string>
    <string name="ai级">8级</string>
    <string name="aj级">9级</string>
    <string name="ak级">10级</string>
    <string name="al级">11级</string>
    <string name="am级">12级</string>
    <string name="an级">13级</string>
    <string name="a优"> 优 </string>
    <string name="a良"> 良 </string>
    <string name="a轻度污染"> 轻度污染 </string>
    <string name="a中度污染"> 中度污染 </string>
    <string name="a重度污染"> 重度污染 </string>
    <string name="a严重污染"> 严重污染 </string>
    <string name="mainthreeday101">今天·晴</string>
    <string name="mainthreeday102">今天·多云</string>
    <string name="mainthreeday103">今天·阴</string>
    <string name="mainthreeday104">今天·轻度雾霾</string>
    <string name="mainthreeday105">今天·中度雾霾</string>
    <string name="mainthreeday106">今天·重度雾霾</string>
    <string name="mainthreeday107">今天·小雨</string>
    <string name="mainthreeday108">今天·中雨</string>
    <string name="mainthreeday109">今天·大雨</string>
    <string name="mainthreeday110">今天·暴雨</string>
    <string name="mainthreeday111">今天·雾</string>
    <string name="mainthreeday112">今天·小雪</string>
    <string name="mainthreeday113">今天·中雪</string>
    <string name="mainthreeday114">今天·大雪</string>
    <string name="mainthreeday115">今天·暴雪</string>
    <string name="mainthreeday116">今天·浮尘</string>
    <string name="mainthreeday117">今天·沙尘</string>
    <string name="mainthreeday118">今天·大风</string>
    <string name="mainthreeday1010">明天·晴</string>
    <string name="mainthreeday1020">明天·多云</string>
    <string name="mainthreeday1030">明天·阴</string>
    <string name="mainthreeday1040">明天·轻度雾霾</string>
    <string name="mainthreeday1050">明天·中度雾霾</string>
    <string name="mainthreeday1060">明天·重度雾霾</string>
    <string name="mainthreeday1070">明天·小雨</string>
    <string name="mainthreeday1080">明天·中雨</string>
    <string name="mainthreeday1090">明天·大雨</string>
    <string name="mainthreeday1100">明天·暴雨</string>
    <string name="mainthreeday1110">明天·雾</string>
    <string name="mainthreeday1120">明天·小雪</string>
    <string name="mainthreeday1130">明天·中雪</string>
    <string name="mainthreeday1140">明天·大雪</string>
    <string name="mainthreeday1150">明天·暴雪</string>
    <string name="mainthreeday1160">明天·浮尘</string>
    <string name="mainthreeday1170">明天·沙尘</string>
    <string name="mainthreeday1180">明天·大风</string>
    <string name="mainthreeday1011">·晴</string>
    <string name="mainthreeday1021">·多云</string>
    <string name="mainthreeday1031">·阴</string>
    <string name="mainthreeday1041">·轻度雾霾</string>
    <string name="mainthreeday1051">·中度雾霾</string>
    <string name="mainthreeday1061">·重度雾霾</string>
    <string name="mainthreeday1071">·小雨</string>
    <string name="mainthreeday1081">·中雨</string>
    <string name="mainthreeday1091">·大雨</string>
    <string name="mainthreeday1101">·暴雨</string>
    <string name="mainthreeday1111">·雾</string>
    <string name="mainthreeday1121">·小雪</string>
    <string name="mainthreeday1131">·中雪</string>
    <string name="mainthreeday1141">·大雪</string>
    <string name="mainthreeday1151">·暴雪</string>
    <string name="mainthreeday1161">·浮尘</string>
    <string name="mainthreeday1171">·沙尘</string>
    <string name="mainthreeday1181">·大风</string>
    <string name="mainthreeday1012">晴</string>
    <string name="mainthreeday1022">多云</string>
    <string name="mainthreeday1032">阴</string>
    <string name="mainthreeday1042">轻度雾霾</string>
    <string name="mainthreeday1052">中度雾霾</string>
    <string name="mainthreeday1062">重度雾霾</string>
    <string name="mainthreeday1072">小雨</string>
    <string name="mainthreeday1082">中雨</string>
    <string name="mainthreeday1092">大雨</string>
    <string name="mainthreeday1102">暴雨</string>
    <string name="mainthreeday1112">雾</string>
    <string name="mainthreeday1122">小雪</string>
    <string name="mainthreeday1132">中雪</string>
    <string name="mainthreeday1142">大雪</string>
    <string name="mainthreeday1152">暴雪</string>
    <string name="mainthreeday1162">浮尘</string>
    <string name="mainthreeday1172">沙尘</string>
    <string name="mainthreeday1182">大风</string>
    <string name="mainthreedaydate1">周一</string>
    <string name="mainthreedaydate2">周二</string>
    <string name="mainthreedaydate3">周三</string>
    <string name="mainthreedaydate4">周四</string>
    <string name="mainthreedaydate5">周五</string>
    <string name="mainthreedaydate6">周六</string>
    <string name="mainthreedaydate7">周日</string>
    <string name="mainthreedaytemperaturemaxandmin1">°/</string>
    <string name="mainthreedaytemperaturemaxandmin2">°</string>
    <string name="baifenbi">%</string>
    <string name="kilometer">km</string>
    <string name="maintoptemperature">°C</string>
    <string name="maintoptemperature2">°</string>
    <string name="main_airquiltyandultravioletl">空气</string>
    <string name="main_airquiltyandultraviolet1">无紫外线 0</string>
    <string name="main_airquiltyandultraviolet2">紫外线</string>
    <string name="main_airquiltyandultraviolet3">空气优</string>
    <string name="main_airquiltyandultraviolet4">空气良</string>
    <string name="space"> </string>
    <string name="main_sunriseandsetrise">日出:</string>
    <string name="main_sunriseandsetset">日落:</string>
    <string name="main_sunriseandsethumidity">湿度</string>
    <string name="main_sunriseandset2">体感</string>
    <string name="main_sunriseandset3">气压</string>
    <string name="fifteendays_detail_visibility">能见度</string>
    <string name="fifteendays_detail_cloudrate">云量</string>
    <string name="main_sunriseandset4">hPa</string>
    <string name="direction1">日落:</string>
    <string name="direction11">东北风</string>
    <string name="direction12">东风</string>
    <string name="direction13">东南风</string>
    <string name="direction14">南风</string>
    <string name="direction15">西南风</string>
    <string name="direction16">西风</string>
    <string name="direction17">西北风</string>
    <string name="direction18">北风</string>
    <string name="main_lifeindex1">无需带伞</string>
    <string name="main_lifeindex2">需要带伞</string>
    <string name="main_lifeindex3">刺骨的冷</string>
    <string name="main_lifeindex4">舒适度·</string>
    <string name="main_lifeindex5">穿衣·</string>
    <string name="main_lifeindex6">适合晾晒</string>
    <string name="main_lifeindex7">不适合晾晒</string>
    <string name="main_lifeindex8">洗车</string>
    <string name="main_lifeindex9">感冒</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="activity_main_air_quality1">空气质量</string>
    <string name="qualitylayout_pollution1">PM2.5</string>
    <string name="qualitylayout_pollution2">PM10</string>
    <string name="qualitylayout_pollution3">SO₂</string>
    <string name="qualitylayout_pollution4">NO₂</string>
    <string name="qualitylayout_pollution5">O₃</string>
    <string name="qualitylayout_pollution6">CO</string>
    <string name="qualitylayout_pollution7">主要污染物  单位：μg/m³</string>
    <string name="qualitylayout_pollution8">24小时空气质量预报</string>
    <string name="qualitylayout_data1">发布</string>
    <string name="qualitylayout_detail11">优</string>
    <string name="qualitylayout_detail12">良</string>
    <string name="qualitylayout_detail13">轻度污染</string>
    <string name="qualitylayout_detail14">中度污染</string>
    <string name="qualitylayout_detail15">重度污染</string>
    <string name="qualitylayout_detail2">小雨\n中雨\n大雨\n暴雨\n</string>
    <string name="qualitylayout_detail4">■ \n</string>
    <string name="qualitylayout_detail3">单位：毫米每小时</string>
    <string name="qualitylayout_detail5">小雨</string>
    <string name="qualitylayout_detail6">中雨</string>
    <string name="qualitylayout_detail7">大雨</string>
    <string name="qualitylayout_detail8">暴雨</string>
    <string name="fifteendays_title">15日天气预报</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="main_twohours1">一小时</string>
    <string name="main_twohours2">分钟后会下雨，出门记得带伞</string>
    <string name="main_twohours3">现在正在下雨，出门记得带伞</string>
    <string name="twohours_layout_1">2小时降水预报</string>
    <string name="twohours_layout_2">单位:mm/h</string>
    <string name="twohours_layout_3">2小时内有降雨，出门记得带伞</string>
    <string name="alert_layout1">气象预警</string>
    <string name="alert_layout_code1">台风</string>
    <string name="alert_layout_code2">暴雨</string>
    <string name="alert_layout_code3">暴雪</string>
    <string name="alert_layout_code4">寒潮</string>
    <string name="alert_layout_code5">大风</string>
    <string name="alert_layout_code6">沙尘暴</string>
    <string name="alert_layout_code7">高温</string>
    <string name="alert_layout_code8">干旱</string>
    <string name="setting_theme">主题</string>
    <string name="setting_theme1">跟随天气（默认）</string>
    <string name="setting_theme_sunny">晴空</string>
    <string name="setting_theme_evening">晴晚</string>
    <string name="setting_theme_sunny2">晴白</string>
    <string name="setting_theme_sunny3">晴雪</string>
    <string name="setting_theme_sunnyafternoon">晴霞</string>
    <string name="setting_theme_sunnyafternoon2">晚风</string>
    <string name="setting_theme_sunnymountain">远山</string>
    <string name="setting_theme_sunnynocloud">晴远</string>
    <string name="setting_theme_sunnypeace">晴静</string>
    <string name="setting_theme_sunnypinkandblue">海暮</string>
    <string name="setting_theme_sunnysmall">晴云</string>
    <string name="setting_theme_night">静谧</string>
    <string name="setting_theme_sand">扬沙</string>
    <string name="setting_theme_snow">静雪</string>
    <string name="setting_theme_rainy">阴云</string>
</resources>