<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/LocationSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/searchPlaceEdit"
            android:layout_width="278dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/location_searchbk"
            android:hint="@string/LocationSearchtext"
            android:inputType="textPostalAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/LocationSearchCancle"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="13dp"
            android:background="@drawable/location_searchbk"
            android:text="@string/LocationSearchButtontext" />
    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/LocationSearchhotcityLyout"
        android:layout_width="match_parent"
        android:layout_height="341dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="100dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:id="@+id/LocationSearchBEIJINGSHI"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="55dp"
                android:background="@drawable/location_searchbk"
                android:text="@string/LocationSearchBEIJING" />

            <Button
                android:id="@+id/LocationSearchSHANGHAISHI"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="185dp"
                android:background="@drawable/location_searchbk"
                android:gravity="center"
                android:text="@string/LocationSearchSHANGHAI" />
            <Button
                android:id="@+id/LocationSearchGUANGZHOU"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="54dp"
                android:background="@drawable/location_searchbk"
                android:text="@string/LocationSearchGUANGZHOU"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="60dp">
            <Button
                android:id="@+id/LocationSearchSHENZHEN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="55dp"
                android:background="@drawable/location_searchbk"
                android:text="@string/LocationSearchSHENZHEN" />
            <Button
                android:id="@+id/LocationSearchHANGZHOU"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="185dp"
                android:background="@drawable/location_searchbk"
                android:gravity="center"
                android:text="@string/LocationSearchHANGZOU"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                android:id="@+id/LocationSearchSUZHOU"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="54dp"
                android:background="@drawable/location_searchbk"
                android:text="@string/LocationSearchSUZHOU"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/LocationSearchRecycleviewLyout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/LocationSearchRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>